--- a/app.json
+++ b/app.json
@@ -21,7 +21,8 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.anonymous.Alfa"
     },
     "web": {
       "favicon": "./assets/favicon.png"
